# gdf_translate

./: Cargo.toml  README-devnotes.md  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
examples/docs/gdf_translate/: all.html  fn.init_logging.html  index.html  macro.parse_gdf_agent_files!.html  macro.parse_gdf_agent_files.html  macro.serialize_gdf_agent_section!.html  macro.serialize_gdf_agent_section.html  macro.translation_tests_assertions!.html  macro.translation_tests_assertions.html  sidebar-items.js
examples/docs/gdf_translate/errors/: index.html  struct.Error.html  type.Result.html
examples/docs/gdf_translate/google/: index.html  sidebar-items.js
examples/docs/gdf_translate/macros/: index.html
examples/docs/gdf_translate/zip/: fn.unzip_file.html  fn.zip_directory.html  index.html  sidebar-items.js
examples/sample_agents/: README.md
examples/testdata/: README.md
src/: cli.rs  errors.rs  gdf_agent.rs  gdf_responses.rs  google.rs  html.rs  lib.rs  macros.rs  main.rs  translate.rs  translatev3.rs  ui.rs  zip.rs
src/google/: dialogflow.rs  gcloud.rs
src/google/dialogflow/: agent.rs  responses.rs
src/google/dialogflow/agent/: entities.rs  intents.rs  utterances.rs
src/google/dialogflow/responses/: default_custom_payload.rs  ga_basic_card.rs  ga_browse_carousel_card.rs  ga_card.rs  ga_carousel_card.rs  ga_custom_payload.rs  ga_image.rs  ga_item.rs  ga_link_out_suggestion.rs  ga_list.rs  ga_media_content.rs  ga_shared.rs  ga_simple.rs  ga_simple2.rs  (+7 more)
src/google/gcloud/: auth.rs  storage_bucket_mgmt.rs  translate.rs
(+73 files in other folders)
